Added result grid

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       <input type="text" class="form-control" placeholder="Search Movie Title.." id="search-box">
     </div>
   </div>
+  <div class="result-container">
+    <div class="result-grid"></div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
 
