Am adaugat rating

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- logo -->
         <div class = "logo">
             <div class = "container">
-                <p>Movie<span>Corn.</span></p>
+                <p>Golden<span>Goose</span></p>
             </div>
         </div>
         <!-- end of logo -->
