--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                         <h3 class = "movie-title">Guardians of the Galaxy Vol. 2</h3>
                         <ul class = "movie-misc-info">
                             <li class = "year">Year: 2017</li>
-                            <li class = "rated">Ratings: PG-13</li>
                             <li class = "released">Released: 05 May 2017</li>
                         </ul>
+                        <p class = "agerestrictions">Age restriction: PG-13</p>
                         <p class = "genre"><b>Genre:</b> Action, Adventure, Comedy</p>
                         <p class = "writer"><b>Writer:</b> James Gunn, Don Abnett, Andy Lanning</p>
                         <p class = "actors"><b>Actors: </b>Chris Pratt, Zoe Saldana, Dave Bautista</p>
