--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                         <p class = "plot"><b>Plot:</b> The Guardians struggle to keep together as a team while dealing with their personal family issues, notably Star-Lord's ecounter with his father the ambitious celestial being Ego.</p>
                         <p class = "language"><b>Language:</b> English</p>
                         <p class = "awards"><b><i class = "fas fa-award"></i></b> Nominated for 1 Oscar</p>
+                        <p id = "recommendation-message"></p>
                     </div> -->
                 </div>
             </div>
