--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             </div>
         </div>
         <!-- end of result container -->
+        <div class="trailer-container" id="trailer-container"></div>
     </div>
 
 
