--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- end of search container -->
 
         <!-- result container -->
-        <div class = "container">
+        <div class = "container" id="result-container-1">
             <div class = "result-container">
                 <div class = "result-grid" id = "result-grid">
                     <!-- movie information here -->
@@ -69,7 +69,7 @@
             </div>
         </div>
         <!-- end of result container -->
-        <div class="trailer-container" id="trailer-container"></div>
+        <div class="trailer-container trailer-animation" id="trailer-container"></div>
     </div>
 
 
